deploy/TimeBilling.Api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timebillingapi
  labels:
    app: timebillingapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timebillingapi
  template:
    metadata:
      labels:
        app: timebillingapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: timebillingapi-storage
          persistentVolumeClaim:
            claimName: timebillingapi-claim
      containers:
      - name: timebillingapi
        image: registry:5000/timebillingapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        resources:
          requests:
            memory: "32Mi"
            cpu: "16m"
          limits:
            memory: "128Mi"
            cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: timebillingapi-storage
---
